# hammerspoon

./: .bumplus.toml  .editorconfig  .env.example  .gitignore  .gitmodules  .luacheckrc  .pre-commit-config.yaml  .tmuxinator.yml  .todocheck.yaml  AGENTS.md  CHANGELOG.md  CHANGELOG.rst  Makefile  Pipfile  README.md  README.rst  SECURITY.md  Taskfile.yml  hammerspoon.rockspec  init.lua  mkdocs.yml  package.json  pyproject.toml  setup.cfg  setup.sh  sonar-project.properties
.chglog/: config.yml
.ci/linters/: .eslintrc.js  .gitleaks.toml  .golangci.yml  .goreleaser.yml  markdown-link-config.json  prettier.config.cjs
.github/linters/: .gitleaks.toml  markdown-link-config.json
.github/workflows/: confluence.yml  sonarqube.yml
Spoons/: .gitignore
Spoons/SpoonInstall.spoon/: docs.json
core/: application_window_states.lua  config.lua  extensions.lua  fntools.lua  functions.lua  hotkey.lua  strkit.lua  window_tracker.lua
docs/: authors.md  code_of_conduct.md  commands.md  components.md  contributing.md  env-vars.md  faq.md  index.md  releasing.md  roadmap.md  support.md  troubleshooting.md  usage.md
docs/contribute/: git-flow.md  github-flow.md
docs/examples/: common.md
docs/source/: AUTHORS.rst  CONTRIBUTING.rst  RELEASING.rst  SUPPORT.rst
mod/: apps.lua  browser.lua  default.lua  hooks.lua  memory.lua  notification.lua  notification_center.lua  pomodoor.lua  reload.lua  screens.lua  speed.lua  tools.lua  vim.lua  widget.lua  wifi.lua  windows.lua  work.lua
modules/: apps.lua  browser.lua  default.lua  hooks.lua  notification_center.lua  pomodoor.lua  switcher.lua  tools.lua  wifi.lua  windows.lua
provision/diagrams/: Taskfile.yml
provision/docker-compose/: dev.yml  test.yml
provision/generator/: README.yaml
provision/generators/: README.yaml
provision/make/: docker.mk  tests.mk
provision/task/: go.yml
src/config/: global.lua  init.lua  workspace.lua
src/core/: bootstrap.lua  config.lua  context.lua  extensions.lua  functions.lua  hotkey.lua  logger.lua  module.lua  spoon_manager.lua
src/mod/: battery.lua  browser.lua  caffeine.lua  (+13 more)
(+54 files in other folders)
